Commit 2: Se agrega funcionalidad superman-scroll, nombre y precios de comics

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body id="superman-scroll">
     <div>
         <img class="banner" src="./assets/img/BannerComic.jpg" alt="">
     </div>
@@ -87,8 +87,8 @@
                 <div class="card">
                     <img src="./assets/img/clean (3).jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Ms. Marvel Mutant Menace</h5>
+                      <p class="card-text">$12000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -100,8 +100,8 @@
                 <div class="card">
                     <img src="./assets/img/clean (1).jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Giant Size Hulk</h5>
+                      <p class="card-text">$10000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -113,8 +113,8 @@
                 <div class="card">
                     <img src="./assets/img/nueva.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Venom: Separation Anxiety</h5>
+                      <p class="card-text">$666</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -126,8 +126,8 @@
                 <div class="card">
                     <img src="./assets/img/nueva4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Daredevil</h5>
+                      <p class="card-text">$15000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -139,8 +139,8 @@
                 <div class="card">
                     <img src="./assets/img/clean (4).jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">X-MEN '97</h5>
+                      <p class="card-text">$11000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -152,8 +152,8 @@
                 <div class="card">
                     <img src="./assets/img/clean (5).jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Fantastic Four: The Perfect Storm</h5>
+                      <p class="card-text">$13000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -165,8 +165,8 @@
                 <div class="card">
                     <img src="./assets/img/clean (6).jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Deadpool: Kills The Marvel Universe</h5>
+                      <p class="card-text">$50000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -178,8 +178,8 @@
                 <div class="card">
                     <img src="./assets/img/nueva3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Carnage</h5>
+                      <p class="card-text">$30000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -191,8 +191,8 @@
                 <div class="card">
                     <img src="./assets/img/clean (9).jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Dead X-MEN 002</h5>
+                      <p class="card-text">$40000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -204,8 +204,8 @@
                 <div class="card">
                     <img src="./assets/img/clean.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Thor</h5>
+                      <p class="card-text">$10000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -217,8 +217,8 @@
                 <div class="card">
                     <img src="./assets/img/detail.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Ghost Rider</h5>
+                      <p class="card-text">$14000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -230,8 +230,8 @@
                 <div class="card">
                     <img src="./assets/img/clean (8).jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">$4000</p>
+                      <h5 class="card-title">Dead X-MEN 004</h5>
+                      <p class="card-text">$12000</p>
                     </div>
                     <div class="d-grid">
                         <button class="btn btn-dark btn-block" onclick="location.href='./vistaProducto.html'">Comprar</button>
@@ -248,7 +248,13 @@
 
 
     </div>
-
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12">
+                    <a class="nav-link" href="#superman-scroll"><img src="./assets/img/superman.png" alt="Superman" class="superman-icon"></a>
+            </div>
+        </div>
+    </div>
     <!--Footer-->
     <footer class="footer mt-auto py-3 bg-dark text-white d-flex justify-content-between align-items-center">
         <div class="ms-5">
