--- a/carrito.html
+++ b/carrito.html
@@ -17,7 +17,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body id="superman-scroll">
     <div>
         <img class="banner" src="./assets/img/BannerComic.jpg" alt="">
     </div>
@@ -111,7 +111,13 @@
     </div>
     
 
-
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12">
+                    <a class="nav-link" href="#superman-scroll"><img src="./assets/img/superman.png" alt="Superman" class="superman-icon"></a>
+            </div>
+        </div>
+    </div>
 
     <!--Footer-->
     <footer class="footer mt-auto py-3 bg-dark text-white d-flex justify-content-between align-items-center">
