--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body>
+<body id="superman-scroll">
 
     <div><img class="banner" src="./assets/img/BannerComic.jpg" alt=""></div>
 
@@ -96,7 +96,13 @@
             </div>
         </div>
     </div>
-
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12">
+                    <a class="nav-link" href="#superman-scroll"><img src="./assets/img/superman.png" alt="Superman" class="superman-icon"></a>
+            </div>
+        </div>
+    </div>
     <!--Footer-->
     <footer class="footer mt-auto py-3 bg-dark text-white d-flex justify-content-between align-items-center">
         <div class="ms-5">
