--- a/pruebanavbar.html
+++ b/pruebanavbar.html
@@ -10,15 +10,14 @@
         integrity="sha512-RI2S7J+KOTIVVh6JxrBRNIxJjIioHORVNow+SSz2OMKsDLG5y/YT6iXEK+R0LlKBo/Uwr1O063yT198V6AZh4w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS Custom -->
-    <link rel="stylesheet" href="./assets/css/styleLogin.css">
+    <link rel="stylesheet" href="./assets/css/styleIndex.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body id="superman-scroll">
-    <div><img class="banner" src="./assets/img/BannerComic.jpg" alt=""></div>
+<body>
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container d-flex justify-content-center">
             <div class="row ">
@@ -33,7 +32,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="js" class="nav-link" href="./index.html#galeria">PRODUCTOS</a>
+                            <a id="js" class="nav-link" href="#galeria">PRODUCTOS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./login.html">INGRESAR</a>
@@ -53,50 +52,60 @@
             </div>
         </div>
     </nav>
-    <div>
-        <form class="formulario mb-5">
-            <h1>¡Bienvenido!</h1>
-            <h4>Inicia sesión para comprar</h4>
-            <div class="mb-3">
-                <label for="user" class="form-label">Nombre de Usuario</label>
-                <input type="email" class="form-control" id="user" aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3">
-                <label for="pass" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="pass">
-            </div>
-            <div class="mb-3">
-                <label class="recuperarContraseña"><u>¿Olvidaste tu contraseña?</u></label>
-            </div>
-            <button type="button" class="btn btn-primary" onclick="obtenerDatos()">Iniciar Sesión</button>
-            <div>
-                <h6>¿Aún no tienes una cuenta? <u>Regístrate</u></h4>
-            </div>
-        </form>
-    </div>
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-12">
-                    <a class="nav-link" href="#superman-scroll"><img src="./assets/img/superman.png" alt="Superman" class="superman-icon"></a>
-            </div>
+    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-dark" type="submit">Search</button>
+            </form>
+          </div>
         </div>
-    </div>
+      </nav>
+   
+
     <!--Footer-->
     <footer class="footer mt-auto py-3 bg-dark text-white d-flex justify-content-between align-items-center">
-        <div>
+        <div class="ms-5">
             <span>© 2024 Comic Store. Todos los derechos reservados.</span>
         </div>
-        <div class="social-icons">
+        <div class="social-icons me-5">
             <a href="https://www.instagram.com/" target="_blank" class="me-3 text-white">
-                <i class="fab fa-instagram"></i>
+                <i class="fab fa-instagram fs-1"></i>
             </a>
             <a href="https://www.facebook.com/" target="_blank" class="me-3 text-white">
-                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-facebook-f fs-1"></i>
             </a>
         </div>
     </footer>
+
     <!-- Bootswatch Script Js and Popper -->
-    <script src="./assets/js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
