Commit 5: se mejoran funcionalidades y se agrega consumo de API

--- a/vistaProducto.html
+++ b/vistaProducto.html
@@ -151,7 +151,7 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-12">
-                    <a class="nav-link" href="#superman-scroll"><img src="./assets/img/superman.png" alt="Superman" class="superman-icon"></a>
+                    <a class="nav-link" href="#superman-scroll"><img src="./assets/img/superman.png" alt="Superman" class="superman-icon" id="scroll-top-icon"></a>
             </div>
         </div>
     </div>
@@ -161,7 +161,7 @@
             <span>© 2024 Comic Store. Todos los derechos reservados.</span>
         </div>
         <div class="social-icons me-5">
-            <a href="https://www.instagram.com/" target="_blank" class="me-3 text-white">
+            <a id="scroll-top-icon" href="https://www.instagram.com/" target="_blank" class="me-3 text-white">
                 <i class="fab fa-instagram fs-1"></i>
             </a>
             <a href="https://www.facebook.com/" target="_blank" class="me-3 text-white">
