--- a/carrito.html
+++ b/carrito.html
@@ -114,7 +114,7 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-12">
-                    <a class="nav-link" href="#superman-scroll"><img src="./assets/img/superman.png" alt="Superman" class="superman-icon"></a>
+                    <a class="nav-link" href="#superman-scroll"><img src="./assets/img/superman.png" alt="Superman" class="superman-icon" id="scroll-top-icon"></a>
             </div>
         </div>
     </div>
