--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-12">
-                    <a class="nav-link" href="#superman-scroll"><img src="./assets/img/superman.png" alt="Superman" class="superman-icon"></a>
+                    <a class="nav-link" href="#superman-scroll"><img src="./assets/img/superman.png" alt="Superman" class="superman-icon" id="scroll-top-icon"></a>
             </div>
         </div>
     </div>
@@ -90,7 +90,7 @@
             <a href="https://www.instagram.com/" target="_blank" class="me-3 text-white">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.facebook.com/" target="_blank" class="me-3 text-white">
+            <a id="scroll-top-icon" href="https://www.facebook.com/" target="_blank" class="me-3 text-white">
                 <i class="fab fa-facebook-f"></i>
             </a>
         </div>
